# nova_agent

./: .env.example  .gitignore  README.md  config.yaml  langgraph.json  main.py  pyproject.toml
backend/: .env  .env.example  README.md  agent_service.py  config.yaml  main.py  pyproject.toml  test_module.py
backend/agent/: ai_blog_search.py  analyze_intent_health.py  chat.py  chat_sample.py  deepagent_sample.py  node_sample.py  super_nova.py  todo_node_sample.py
backend/nova/: __init__.py
backend/prompts/: coder.md  coordinator.md  planner.md  reporter.md  researcher.md  supervisor.md
backend/test/: test_crawai.py
cache/: llm_cache.db
chat-ui/: rxconfig.py
chat-ui/app/: app.py  globel_var.py  state.py
docker/nova_agent/: Caddyfile  build.sh  dockerfile  entrypoint.sh  nginx.conf  setup.sh  supervisord.conf
experimental/: ainovel.py  ainovel_architect.py  ainovel_chapter.py  chat_input_bar.py  chat_page.py  configuration.py  deep_researcher.py  deepresearcher.py  filesystem_manager.py  greeting_section.py  head_components.py  header_section.py  memory_manager.py  navbar_components.py  sandbox_manager.py  state.py  suggestions_section.py  super_nova.py  utils.py  web_crawler.py  web_search.py  wechat_crawler.py  wechat_searcher.py  wechat_serper.py  weixin_search.py
experimental/agent/: ainovel.py  ainovel_architect.py  chat.py  deepresearcher.py  memorizer.py  researcher.py  super_nova.py  theme_slicer.py
experimental/deepagents/: __init__.py  graph.py
experimental/novel/: head_section.py  tail_section.py
experimental/other/: chat_message_bubble.py  input_section.py  (+3 more)
frontend/: .gitignore  package-lock.json  requirements.txt  vite.config.ts
nova/: __init__.py  main.py
prompts/: coder.md  coordinator.md  planner.md  reporter.md  researcher.md  supervisor.md
scripts/: run_backend.sh  run_langgraph_cli.sh  run_nova_server_sync.sh  run_server.py  run_server.sh  run_web.sh
src/: main.py
test/: config.yaml  test.py  test_agent.py  test_agent_stream_client.py  test_ainovel.py  test_ainovel_agent.py  test_ainovel_agent_client.py  test_ainovel_agent_test.py  test_ainovel_stream_client.py  test_chat.py  test_crawl_tool.py  test_deepagent.py  test_deepresearcher.py  test_deepresearcher_client.py  test_deepresearcher_stream_client.py  test_embedding.py  test_graph_event.py  test_llm.py  test_llm_client.py  test_md2html_tool.py  test_memonrizer.py  test_memorizer.py  test_memorizer_client.py  test_middleware.py  test_ppt_generator.py  test_researcher.py  test_researcher_client.py  test_search_tool.py  test_serp_tool.py  test_stream_agent_client.py  test_stream_llm.py  test_stream_llm_client.py  test_summarize.py  test_super_nova.py  test_themeslicer.py  test_todo_list.py  test_wechat_researcher.py  test_wechat_search_tool.py  test_weixin_search_tool.py
web-ui/: run_streamlit.sh  st_main.py
(+324 files in other folders)
