[project]
name = "nova-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.2"
dependencies = [
    "aiosqlite>=0.21.0",
    "akshare>=1.17.91",
    "colorlog>=6.9.0",
    "crawl4ai>=0.7.3",
    "dill>=0.4.0",
    "fastapi>=0.116.1",
    "json-repair>=0.48.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-deepseek>=0.1.4",
    "langchain-google-genai>=2.1.9",
    "langchain-litellm>=0.2.2",
    "langgraph>=0.6.4",
    "langgraph-cli[inmem]>=0.4.2",
    "langsmith>=0.4.10",
    "litellm>=1.74.12",
    "markdown>=3.8.2",
    "markdownify>=1.2.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "python-pptx>=1.0.2",
    "readabilipy>=0.3.0",
    "reflex>=0.8.11",
    "uvicorn>=0.35.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
