[project]
name = "nova-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.2"
dependencies = [
    "aiosqlite>=0.21.0",
    "chainlit>=2.9.5",
    "colorlog>=6.9.0",
    "crawl4ai>=0.7.3",
    "deepagents>=0.3.3",
    "dill>=0.4.0",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "json-repair>=0.48.0",
    "langchain==1.1.3",
    "langchain-community==0.4.1",
    "langchain-litellm==0.3.5",
    "langchain-openai>=1.1.9",
    "langgraph==1.0.5",
    "litellm==1.74.12",
    "markdown>=3.8.2",
    "markdownify>=1.2.0",
    "matplotlib>=3.10.7",
    "nuitka>=2.8.9",
    "pandas>=2.3.3",
    "python-pptx>=1.0.2",
    "readabilipy>=0.3.0",
    "reflex==0.8.11",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.35.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[tool.uv]
# 全局设置 uv 的索引策略（对 add/install 等命令均生效）
index-strategy = "unsafe-best-match"
